06-Ingress/ingress-example-1/practise/ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-controller
  namespace: default
  annotations:
       nginx.ingress.kubernetes.io/rewrite-traget: /
       nginx.ingress.kubernetes.io/ssl-redirect: “false”

spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
      labels:
        name: nginx-ingress
    spec:
      serviceAccountName: ingress-serviceaccount
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-configuration
            - --default-backend-service=app-space/default-http-backend
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
