06-Ingress/ingress-example-1/practise/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: ingress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
  selector: 
    name: nginx-ingress
  type: NodePort
status:
  loadBalancer: {}
