06-Ingress/ingress-example-1/practise/web2-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: web2
  name: web2-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: web2
status:
  loadBalancer: {}
