06-Ingress/ingress-example-1/practise/example-ingress-with-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: example-ingress
spec:
  ingressClassName: default
  rules:
  - host: host-web.info
    http:
      paths:
      - backend:
          service:
            name: web-service
            port:
              number: 8080
        path: /
        pathType: Prefix
      - backend:
          service:
            name: web2-service
            port:
              number: 8080
        path: /v2
        pathType: Prefix
status:
  loadBalancer: {}
