06-Ingress/ingress-example-1/practise/ingress-without-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: null
  name: ravi-ingress-without-host
  namespace: ravi-ingress
spec:
  ingressClassName: default
  rules:
  - http:
      paths:
      - backend:
          service:
            name: raviweb-1-svc
            port:
              number: 8080
        path: /v1
        pathType: Exact
      - backend:
          service:
            name: raviweb-2-svc
            port:
              number: 8080
        path: /v2
        pathType: Exact
status:
  loadBalancer: {}
