06-Ingress/ingress-example-1/practise/ravi-example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ravi-example-ingress
  namespace: ravi-ingress
spec:
  ingressClassName: default
  rules:
  - host: ravi.hello-world.info
    http:
      paths:
      - backend:
          service:
            name: raviweb-1-svc
            port:
              number: 8080
        path: /v1
        pathType: Exact
      - backend:
          service:
            name: raviweb-2-svc
            port:
              number: 8080
        path: /v2
        pathType: Exact
status:
  loadBalancer: {}
